--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Week 6 Coding Assignment!</h1>
+    <h1>This means war!</h1>
     <script src="index.js"></script> 
 </body>
 </html>
